[gd_scene load_steps=15 format=3 uid="uid://b461ic7wcaucj"]

[ext_resource type="Script" path="res://scenes/IFSMenu.gd" id="1_aiqhv"]
[ext_resource type="Texture2D" uid="uid://ci2mpewrmv3rv" path="res://assets/gui/close_button.png" id="2_8d01b"]
[ext_resource type="Texture2D" uid="uid://vceyw8jntod2" path="res://assets/gui/panels.png" id="2_41k5d"]
[ext_resource type="Texture2D" uid="uid://c0ikmcsba2msv" path="res://assets/gui/playground_buttons.png" id="3_lkgb0"]
[ext_resource type="Script" path="res://scenes/IFSGraphTypeButton.gd" id="5_esd6f"]

[sub_resource type="AtlasTexture" id="AtlasTexture_42lws"]
atlas = ExtResource("2_8d01b")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nf8ve"]
atlas = ExtResource("2_8d01b")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nvq76"]
atlas = ExtResource("2_8d01b")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_g50sa"]
atlas = ExtResource("3_lkgb0")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ec8ob"]
atlas = ExtResource("3_lkgb0")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jao7p"]
atlas = ExtResource("3_lkgb0")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dgbgy"]
atlas = ExtResource("3_lkgb0")
region = Rect2(0, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dr0ou"]
atlas = ExtResource("3_lkgb0")
region = Rect2(64, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hggs5"]
atlas = ExtResource("3_lkgb0")
region = Rect2(32, 224, 32, 32)

[node name="IFSMenu" type="MarginContainer"]
offset_right = 44.0
offset_bottom = 72.0
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 0
script = ExtResource("1_aiqhv")

[node name="Background" type="NinePatchRect" parent="."]
layout_mode = 2
texture = ExtResource("2_41k5d")
region_rect = Rect2(17, 0, 15, 16)
patch_margin_left = 3
patch_margin_top = 12
patch_margin_right = 4
patch_margin_bottom = 12

[node name="IFSMenu" type="MarginContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="Cols" type="HBoxContainer" parent="IFSMenu"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 4

[node name="StoredIFS" type="HBoxContainer" parent="IFSMenu/Cols"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="Buttons" type="VBoxContainer" parent="IFSMenu/Cols"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="CloseButton" type="TextureButton" parent="IFSMenu/Cols/Buttons"]
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 3
texture_normal = SubResource("AtlasTexture_42lws")
texture_pressed = SubResource("AtlasTexture_nf8ve")
texture_hover = SubResource("AtlasTexture_nvq76")

[node name="AddButton" type="TextureButton" parent="IFSMenu/Cols/Buttons"]
visibility_layer = 2
layout_mode = 2
size_flags_horizontal = 0
texture_normal = SubResource("AtlasTexture_g50sa")
texture_pressed = SubResource("AtlasTexture_ec8ob")
texture_hover = SubResource("AtlasTexture_jao7p")

[node name="IFSGraphTypeButton" type="TextureButton" parent="IFSMenu/Cols/Buttons"]
layout_mode = 2
texture_normal = SubResource("AtlasTexture_dgbgy")
texture_pressed = SubResource("AtlasTexture_dr0ou")
texture_hover = SubResource("AtlasTexture_hggs5")
script = ExtResource("5_esd6f")

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="pressed" from="IFSMenu/Cols/Buttons/CloseButton" to="." method="_on_close_button_pressed"]
[connection signal="pressed" from="IFSMenu/Cols/Buttons/AddButton" to="." method="_on_add_button_pressed"]
